Ajustes api para deploy cloud e integracao mobile